package dmParticleDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.particle.proto";
option java_outer_classname = "Particle";

enum EmitterType
{
    EMITTER_TYPE_SPHERE =    0;
    EMITTER_TYPE_CONE =      1;
    EMITTER_TYPE_BOX =       2;
};

enum PlayMode
{
    PLAY_MODE_ONCE = 0;
    PLAY_MODE_LOOP = 1;
}

enum EmissionSpace
{
    EMISSION_SPACE_WORLD =      0;
    EMISSION_SPACE_EMITTER =    1;
}

message Texture_t
{
    required string name =  1 [(resource)=true];
    required uint32 t_x =    2;
    required uint32 t_y =    3;
}

enum EmitterKey
{
    EMITTER_KEY_SPAWN_DELAY         = 0;
    EMITTER_KEY_SPHERE_RADIUS       = 1;
    EMITTER_KEY_CONE_RADIUS         = 2;
    EMITTER_KEY_CONE_HEIGHT         = 3;
    EMITTER_KEY_BOX_WIDTH           = 4;
    EMITTER_KEY_BOX_HEIGHT          = 5;
    EMITTER_KEY_BOX_DEPTH           = 6;
    EMITTER_KEY_PARTICLE_LIFE_TIME  = 7;
    EMITTER_KEY_PARTICLE_SPEED      = 8;
    EMITTER_KEY_PARTICLE_SIZE       = 9;
    EMITTER_KEY_PARTICLE_ALPHA      = 10;
    EMITTER_KEY_COUNT               = 11;
}

enum ParticleKey
{
    PARTICLE_KEY_VELOCITY   = 0;
    PARTICLE_KEY_SIZE       = 1;
    PARTICLE_KEY_ALPHA      = 2;
    PARTICLE_KEY_COUNT      = 3;
}

/**
 * MODIFIER_TYPE_LINEAR:
 *   MODIFIER_KEY_MIN = relative min
 *   MODIFIER_KEY_MAX = relative max
 * MODIFIER_TYPE_EASY_IN:
 *   MODIFIER_KEY_MIN = relative min
 *   MODIFIER_KEY_MAX = relative max
 * MODIFIER_TYPE_EASY_OUT:
 *   MODIFIER_KEY_MIN = relative min
 *   MODIFIER_KEY_MAX = relative max
 * MODIFIER_TYPE_EASY_IN_OUT:
 *   MODIFIER_KEY_MIN = relative min
 *   MODIFIER_KEY_MAX = relative max
 * MODIFIER_TYPE_TWO_SEG_SPLINE:
 *   MODIFIER_KEY_T = key frame t (repeated),
 *   MODIFIER_KEY_MIN = value at 0
 *   MODIFIER_KEY_MID = value at t
 *   MODIFIER_KEY_MAX = value at 1
 */
enum ModifierType
{
    MODIFIER_TYPE_LINEAR         = 0;
    MODIFIER_TYPE_EASE_IN        = 1;
    MODIFIER_TYPE_EASE_OUT       = 2;
    MODIFIER_TYPE_EASE_IN_OUT    = 3;
    MODIFIER_TYPE_TWO_SEG_SPLINE = 4;
    MODIFIER_TYPE_COUNT          = 5;
}

enum ModifierKey
{
    MODIFIER_KEY_MIN    = 0;
    MODIFIER_KEY_MID    = 1;
    MODIFIER_KEY_MAX    = 2;
    MODIFIER_KEY_T      = 3;
    MODIFIER_KEY_COUNT  = 4;
}

message ModifierProperty
{
    required ModifierKey    key     = 1;
    required float          value   = 2;
}

message Emitter
{
    required PlayMode       mode                = 1;
    optional float          duration            = 2 [default = 0];

    required EmissionSpace  space               = 3;
    required dmMath.Quat    rotation            = 4;

    required Texture_t      texture             = 5;
    required string         material            = 6 [(resource)=true];

    required uint32         max_particle_count    = 7;

    required EmitterType    type                = 8;

    message Modifier
    {
        enum InputType
        {
            INPUT_TYPE_RAND = 0;
            INPUT_TYPE_GAIN = 1;
        }

        required ModifierType       type        = 1;
        required InputType          input       = 2;
        repeated ModifierProperty   properties  = 3;
    }

    message Property
    {
        required EmitterKey key         = 1;
        required float      value       = 2;
        repeated Modifier   modifiers   = 3;
    }
    repeated Property properties                = 9;

    message ParticleModifier
    {
        required ModifierType       type        = 1;
        required ParticleKey        modify      = 2;
        repeated ModifierProperty   properties  = 3;
    }
    repeated ParticleModifier particle_modifiers = 10;
}
